[package]
name = "core_http"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
publish = false

[dependencies]
core_utils = { path = "../core_utils" }
core_http_errors = { path = "../core_http_errors" }
core_mime_type = { path = "../core_mime_type" }
core_json = { path = "../core_json" }
