[package]
name = "core_router"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
publish = false

[dependencies]
core_http = { path = "../core_http" }
core_middleware = { path = "../core_middleware" }
core_http_errors = { path = "../core_http_errors" }
core_json = { path = "../core_json" }