[package]
name = "suika"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_server"
license = "MIT"
readme = "README.md"

[dependencies]
suika_json = { path = "../suika_json" }
suika_mime = { path = "../suika_mime" }
suika_utils = { path = "../suika_utils" }
suika_templates = { path = "../suika_templates" }
suika_server = { path = "../suika_server" }

[lib]
name = "suika"
path = "src/lib.rs"
