[package]
name = "suika"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika"
license = "MIT"
readme = "README.md"

[dependencies]
suika_json = "0.1.0"
suika_mime = "0.1.0"
suika_utils = "0.1.0"
suika_templates = "0.1.0"
suika_server = "0.1.0"

[lib]
name = "suika"
path = "src/lib.rs"
