[package]
name = "suika"
description = "A simple web stack for building web applications"
version = "0.1.4"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika"
license = "MIT"
readme = "../../README.md"

[dependencies]
suika_json = "0.1.1"
suika_mime = "0.1.1"
suika_utils = "0.1.1"
suika_templates = "0.1.2"
suika_server = "0.1.1"
suika_wasm = "0.1.2"

[lib]
name = "suika"
path = "src/lib.rs"
