[package]
name = "suika_example"
description = "An example project demonstrating the suika web stack"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_example"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
suika = "0.1.1"
