[package]
name = "suika_json"
description = "A JSON handling library for the suika web stack"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_json"
license = "MIT"
readme = "README.md"

[dependencies]
suika_utils = "0.1.1"

[lib]
name = "suika_json"
path = "src/lib.rs"