[package]
name = "suika_mime"
description = "A library for handling MIME types in the suika web stack"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_mime"
license = "MIT"
readme = "README.md"

[lib]
name = "suika_mime"
path = "src/lib.rs"