[package]
name = "suika_router"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
publish = false

[dependencies]
suika_http = { path = "../suika_http" }
suika_middleware = { path = "../suika_middleware" }
suika_errors = { path = "../suika_errors" }
suika_json = { path = "../suika_json" }
