[package]
name = "suika_server"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_server"
license = "MIT"
readme = "README.md"

[dependencies]
suika_json = { path = "../suika_json" }
suika_utils = { path = "../suika_utils" }
suika_mime = { path = "../suika_mime" }
