[package]
name = "suika_server"
description = "A server library for the suika web stack"
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_server"
license = "MIT"
readme = "README.md"

[dependencies]
suika_json = "0.1.0"
suika_utils = "0.1.0"
suika_mime = "0.1.0"

[lib]
name = "suika_server"
path = "src/lib.rs"