[package]
name = "suika_server"
description = "A server library for the suika web stack"
version = "0.1.3"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_server"
license = "MIT"
readme = "README.md"

[dependencies]
suika_json = "0.1.1"
suika_utils = "0.1.1"
suika_mime = "0.1.1"
suika_templates = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
regex = "1.11.1"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.3"

[lib]
name = "suika_server"
path = "src/lib.rs"
