[package]
name = "suika_templates"
description = "A simple template engine for the suika web stack"
version = "0.1.3"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_templates"
license = "MIT"
readme = "README.md"

[dependencies]
suika_utils = "0.1.1"

[lib]
name = "suika_templates"
path = "src/lib.rs"