[package]
name = "suika_templates"
description = "A simple template engine for the suika web stack"
version = "0.1.5"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_templates"
license = "MIT"
readme = "README.md"

[dependencies]
suika_utils = "0.1.1"
suika_json = "0.1.3"
glob = "0.3.2"

[lib]
name = "suika_templates"
path = "src/lib.rs"
