[package]
name = "suika_ui"
description = "THIS CRATE IS DEPRECATED. It was a toy project and is no longer maintained or updated. No further development is planned."
version = "0.1.0"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_wasm"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.76", features = [
  "Window",
  "Document",
  "HtmlElement",
  "console",
  "Element",
  "NodeList",
  "Request",
  "RequestInit",
  "Response",
  "Event",
] }

[lib]
crate-type = ["cdylib", "rlib"]
