[package]
name = "suika_utils"
description = "A small utility library for the suika web stack"
version = "0.1.2"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_utils"
license = "MIT"
readme = "README.md"

[lib]
name = "suika_utils"
path = "src/lib.rs"