[package]
name = "suika_wasm"
description = "A middleware for the suika web stack to serve pre-compiled WebAssembly (Wasm) files."
version = "0.1.5"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_wasm"
license = "MIT"
readme = "README.md"
include = ["wasm/**", "src/**", "README.md", "Cargo.toml"]

[dependencies]
suika_server = "0.1.4"
suika_mime = "0.1.1"
suika_utils = "0.1.1"
wasm-bindgen = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.83"

[lib]
name = "suika_wasm"
path = "src/lib.rs"
