[package]
name = "suika_wasm"
description = "THIS CRATE IS DEPRECATED. It was a toy project and is no longer maintained or updated. No further development is planned."
version = "0.1.9"
edition = "2021"
authors = ["Jon Watkins"]
repository = "https://github.com/JonWatkins/suika/tree/master/crates/suika_wasm"
license = "MIT"
readme = "README.md"
include = ["wasm/**", "src/**", "README.md", "Cargo.toml"]

[dependencies]
suika_server = "0.1.7"
suika_mime = "0.1.1"
suika_utils = "0.1.1"
wasm-bindgen = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.83"

[lib]
name = "suika_wasm"
path = "src/lib.rs"
